--- a/.goreleaser.yml
+++ b/.goreleaser.yml
@@ -38,9 +38,7 @@ builds:
     dir: .
 
 archives:
-  - format_overrides:
-      - goos: windows
-        format: zip
+  - format: zip
     name_template: '{{ .ProjectName }}_{{ .Version }}_{{ .Os }}_{{ .Arch }}'
 
 checksum:
